<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/shot_header"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/view_count"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:drawablePadding="8dp"
        android:drawableStart="@drawable/ic_visibility_gray_18dp"
        android:gravity="center"
        android:padding="5dp"
        app:layout_constraintEnd_toStartOf="@+id/like_count"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="10"/>

    <TextView
        android:id="@+id/like_count"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawablePadding="8dp"
        android:drawableStart="@drawable/ic_favorite_gray_18dp"
        android:gravity="center"
        android:padding="5dp"
        app:layout_constraintBottom_toBottomOf="@+id/view_count"
        app:layout_constraintEnd_toStartOf="@+id/bucket_count"
        app:layout_constraintStart_toEndOf="@+id/view_count"
        app:layout_constraintTop_toTopOf="@+id/view_count"
        tools:text="10"/>

    <TextView
        android:id="@+id/bucket_count"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawablePadding="8dp"
        android:drawableStart="@drawable/ic_bucket_gray_18dp"
        android:gravity="center"
        android:padding="5dp"
        app:layout_constraintBottom_toBottomOf="@+id/like_count"
        app:layout_constraintEnd_toStartOf="@+id/tv_attachment_count"
        app:layout_constraintStart_toEndOf="@+id/like_count"
        app:layout_constraintTop_toTopOf="@+id/like_count"
        tools:text="10"/>

    <TextView
        android:id="@+id/tv_attachment_count"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawablePadding="8dp"
        android:drawableStart="@drawable/ic_attachment_gray_18dp"
        android:gravity="center"
        android:padding="5dp"
        app:layout_constraintBottom_toBottomOf="@+id/bucket_count"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/bucket_count"
        app:layout_constraintTop_toTopOf="@+id/bucket_count"
        tools:text="10"/>

    <View
        android:id="@+id/divider1"
        android:layout_width="0dp"
        android:layout_height="1px"
        android:layout_marginTop="8dp"
        android:background="@color/divider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/view_count"/>

    <com.facebook.drawee.view.SimpleDraweeView
        android:id="@+id/iv_avatar"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@id/divider1"
        app:placeholderImage="@drawable/img_default_avatar"
        app:roundAsCircle="true"/>

    <TextView
        android:id="@+id/tv_by"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/word_by"
        android:textColor="@color/text_black"
        android:textSize="14sp"
        app:layout_constraintStart_toEndOf="@id/iv_avatar"
        app:layout_constraintTop_toTopOf="@id/iv_avatar"/>

    <TextView
        android:id="@+id/tv_user_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:maxLines="1"
        android:textColor="@color/text_blue"
        android:textSize="15sp"
        app:layout_constraintBaseline_toBaselineOf="@id/tv_by"
        app:layout_constraintStart_toEndOf="@id/tv_by"
        tools:text="Lily"/>

    <TextView
        android:id="@+id/tv_for"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/word_for"
        android:textColor="@color/text_black"
        android:textSize="14sp"
        android:visibility="gone"
        app:layout_constraintBaseline_toBaselineOf="@id/tv_by"
        app:layout_constraintStart_toEndOf="@id/tv_user_name"/>

    <TextView
        android:id="@+id/tv_team_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:maxLines="1"
        android:textColor="@color/text_blue"
        android:textSize="15sp"
        app:layout_constraintBaseline_toBaselineOf="@id/tv_by"
        app:layout_constraintStart_toEndOf="@id/tv_for"
        tools:text="Fireart Studio"/>

    <TextView
        android:id="@+id/tv_in"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="8dp"
        android:text="@string/word_in"
        android:textColor="@color/text_black"
        android:textSize="14sp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@id/iv_avatar"
        app:layout_constraintStart_toEndOf="@id/iv_avatar"/>

    <TextView
        android:id="@+id/tv_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:maxLines="1"
        android:textColor="@color/text_black"
        android:textSize="15sp"
        android:visibility="gone"
        app:layout_constraintBaseline_toBaselineOf="@id/tv_in"
        app:layout_constraintStart_toEndOf="@id/tv_in"
        tools:text="Los"/>

    <TextView
        android:id="@+id/tv_on"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="8dp"
        android:text="@string/word_on"
        android:textColor="@color/text_black"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@id/iv_avatar"
        app:layout_constraintStart_toEndOf="@id/tv_location"/>

    <TextView
        android:id="@+id/tv_create_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:maxLines="1"
        android:textColor="@color/text_black"
        android:textSize="15sp"
        app:layout_constraintBaseline_toBaselineOf="@id/tv_on"
        app:layout_constraintStart_toEndOf="@id/tv_on"
        tools:text="Sep 12, 2017"/>

    <View
        android:id="@+id/divider2"
        android:layout_width="0dp"
        android:layout_height="1px"
        android:layout_marginTop="8dp"
        android:background="@color/divider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_avatar"/>

    <TextView
        android:id="@+id/tv_description"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/divider2"
        tools:text="Hello everyone , I'm David from chengdu, China
Thanks for
@ian
This is my first show. hope you like it.
Thank you!"/>

    <View
        android:id="@+id/divider3"
        android:layout_width="0dp"
        android:layout_height="1px"
        android:layout_marginTop="8dp"
        android:background="@color/divider"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_description"/>

    <TextView
        android:id="@+id/tv_comment_count"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        android:textColor="@color/text_dark_black"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/divider3"
        tools:text="104 Responses"/>

    <RadioGroup
        android:id="@+id/rg_sort"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="@id/tv_comment_count"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/tv_comment_count">

        <RadioButton
            android:id="@+id/rb_oldest"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:button="@null"
            android:checked="true"
            android:tag="@null"
            android:text="@string/oldest"
            android:textColor="@color/grey_checked_black"
            android:textSize="12sp"/>

        <RadioButton
            android:id="@+id/rb_newest"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:button="@null"
            android:tag="newest"
            android:text="@string/newest"
            android:textColor="@color/grey_checked_black"
            android:textSize="12sp"/>

        <RadioButton
            android:id="@+id/rb_liked"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:button="@null"
            android:tag="liked"
            android:text="@string/liked"
            android:textColor="@color/grey_checked_black"
            android:textSize="12sp"/>
    </RadioGroup>
</android.support.constraint.ConstraintLayout>